--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
 
 #about{
     padding: 80px 0;
+    background:#131010;
     color: #ababab;
 }
 
@@ -55,6 +56,7 @@ margin-left: 0;
 
 #contact{
     padding-top: 30px;
+    background-color: #131010;
 }
 
 .contact-left{
@@ -341,12 +343,16 @@ nav .fas{
     }
     .contact-left h1{
         padding-left:120px;
-        font-size:60px;
+        font-size:40px;
         font-weight:600
     }
     .contact-left p i{
+        box-sizing: border-box;
+        display: flex;
+        position: relative;
+        top: 20px;
+        right: 25px;
         font-size:20px;
-        padding-left:20px;
     }
  
      form{
@@ -378,6 +384,7 @@ nav .fas{
         width: 200px;
         height: 100vh;
         padding-top: 50px;
+        z-index: 2;
         transition: right 0.5s;
     }
 
@@ -393,5 +400,8 @@ nav .fas{
         cursor: pointer;
     }
 
+    .sub-title{
+        font-size: 40px;
+    }
     
 }
