--- a/styles.css
+++ b/styles.css
@@ -341,6 +341,12 @@ nav .fas{
     #contact{
         padding-left:0px;
     }
+
+    .contact-left{
+        position: relative;
+        right: 20px;
+    }
+
     .contact-left h1{
         padding-left:120px;
         font-size:40px;
